# magi

./: .gitignore  Cargo.toml  LICENSE  PERFORMANCE.md  README.md  REMOTE_README.md  TEST_AUDIT.md  flake.nix
.github/workflows/: ci.yml  release.yml
assets/: magi.tape  showcase.tape  wand.blend  wand.blend1
assets/demo/: setup.sh
src/: errors.rs  git.rs  i18n.rs  keys.rs  lib.rs  magi.rs  main.rs  model.rs  msg.rs  view.rs
src/config/: config.rs  detect.rs  mod.rs  settings.rs  theme.rs
src/git/: apply.rs  checkout.rs  cherry_pick.rs  commit.rs  commit_utils.rs  config.rs  credential.rs  diff_utils.rs  discard.rs  file_checkout.rs  info.rs  log.rs  merge.rs  open_pr.rs  preview.rs  pty_command.rs  push.rs  rebase.rs  recent_commits.rs  releases.rs  (+15 more)
tests/: commit_select_popup.rs  cursor_positioning.rs  git_cherry_pick.rs  git_discard.rs  git_info.rs  git_reverse.rs  git_stage.rs  git_staged_changes.rs  git_unstaged_changes.rs  git_untracked_files.rs  i18n.rs  message_pump.rs  render_snapshots.rs  update.rs  update_apply.rs  update_apply_selected.rs  update_checkout_branch.rs  update_cherry_spinoff.rs  update_cherry_spinout.rs  update_commit_sign.rs  update_cursor_movement.rs  update_delete_branch.rs  update_discard.rs  update_donate.rs  update_fetch_popup.rs  update_file_checkout.rs  update_fixup_commit.rs  update_harvest.rs  update_help_popup.rs  update_log_view.rs  update_merge.rs  update_preview.rs  update_pull_popup.rs  update_push_popup.rs  update_rebase.rs  update_reset.rs  update_reverse.rs  update_revert.rs  update_revise_commit.rs  update_scroll.rs  (+18 more)
(+278 files in other folders)
