[package]
name = "magi"
version = "0.2.0"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
git2 = { version = "0.20.1", features = ["vendored-openssl"] }
tempfile = "3.19.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
portable-pty = "0.9"
regex = "1"
lazy_static = "1.4"
