[package]
name = "magi"
version = "0.3.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
git2 = { version = "0.20.4" }
tempfile = "3.26.0"
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
dirs = "6.0"
portable-pty = "0.9"
regex = "1"
lazy_static = "1.5"
urlencoding = "2"
