[package]
name = "magi"
version = "0.18.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.2"
git2 = "0.21.0"
tempfile = "3.27.0"
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
dirs = "6.0"
portable-pty = "0.9"
regex = "1"
lazy_static = "1.5"
urlencoding = "2"
terminal-colorsaurus = "1.0"

[dev-dependencies]
insta = { version = "1.48", features = ["filters"] }
